discussion/kv_engine/125780/125780_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

Use new api for compact

Change-Id: Ie9b1389bdd1809ad539a340e866682b3515c3f00

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-04-15 08:55:39.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-15 09:06:04.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2165/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2165/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10972/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27504/ : FAILURE

Compile error at c:\jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\couch-kvstore/couch-kvstore.h(718): error C2039: "CompactRewriteDocInfoCallback": is not a member of "cb::couchstore" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27504/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1692/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:994:25: error: no type named "CompactRewriteDocInfoCallback" in namespace "cb::couchstore" [clang-diagnostic-error]
        cb::couchstore::CompactRewriteDocInfoCallback docinfo_hook) {
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1078:31: error: no member named "compact" in namespace "cb::couchstore" [clang-diagnostic-error]
    errCode = cb::couchstore::compact(
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:718:44: error: no type named "CompactRewriteDocInfoCallback" in namespace "cb::couchstore" [clang-diagnostic-error]
                           cb::couchstore::CompactRewriteDocInfoCallback dhook);
                                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1692/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:994:25:
error: no type named "CompactRewriteDocInfoCallback" in namespace "cb::couchstore" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1692/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23518/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:718:44:
error: no type named "CompactRewriteDocInfoCallback" in namespace "cb::couchstore"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23518/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3105/ : FAILURE

Compile error at [2020-04-15T08:56:38.635Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:718:28:
error: ?cb::couchstore::CompactRewriteDocInfoCallback? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3105/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3121/ : FAILURE

Compile error at [2020-04-15T09:00:15.251Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:718:28:
error: ?cb::couchstore::CompactRewriteDocInfoCallback? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3121/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3175/ : FAILURE

Compile error at [2020-04-15T09:00:23.046Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.h:718:28:
error: ?cb::couchstore::CompactRewriteDocInfoCallback? has not been declared
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3175/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/212/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
